--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
           <!-- end "powerhouse_overlap_IA" photo --> 
 
           <!-- "fan02_NoAudio" video -->
-          <div class="video-container" style="height:800px;margin-top:10px;margin-bottom: 700px;" >
+          <div class="video-container" style="height:800px;margin-top:10px;margin-bottom: 600px;" >
           <video data-mediaid="fan02_NoAudio" data-startmedia="9900" data-stopmedia="11500" loop></video>
           </div>
           <!-- end "fan02_NoAudio" video -->  
@@ -131,33 +131,34 @@
 
           <!-- "making_steel" video -->
           <div class="video-container" style="height:800px;">
-            <video data-mediaid="making_steel"  data-startmedia="11100" data-stopmedia="12800"></video>
+            <video data-mediaid="making_steel"  data-startmedia="11100" data-stopmedia="12850"></video>
           </div>
           <!-- end "making_steel" video -->     
 
 
+
           <!-- "high_house_gears01_JB" photo -->
-          <div data-mediaid="high_house_gears01_JB" class="image cover-bg" style="height:1000px; margin-bottom: 0px;" data-13700="opacity:1;" data-14000="opacity:0;"></div>
+          <div data-mediaid="high_house_gears01_JB" class="image cover-bg" style="height:1000px; margin-bottom: 0px;" data-13900="opacity:1;"></div>
           <!-- end "high_house_gears01_JB" photo -->
 
           <!-- "snow_doorway01_AR" photo -->
-          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:1100px;" data-12500="opacity:0;" data-13300="opacity:0;" data-13600="opacity:1;"></div>
+          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:1100px;" data-12900="opacity:0;" data-13000="opacity:0;" data-13300="opacity:0.5;" data-13600="opacity:1;"></div>
           <!-- end "snow_doorway01_AR" photo -->
 
 
           <!-- "Strike_Story" backround music -->
-          <audio data-mediaid="Strike_Story" data-startmedia="13780" data-stopmedia="17900">
+          <audio data-mediaid="Strike_Story" data-startmedia="13890" data-stopmedia="18500">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Strike_Story" background music -->
 
 
           <!-- "BS01_JB" photo -->
-          <div data-mediaid="BS01_JB" class="image cover-bg" style="height:625px;" data-14000="opacity:1;" data-15500="opacity:1;" data-15900="opacity:0;"></div>
+          <div data-mediaid="BS01_JB" class="image cover-bg" style="height:625px;" data-14500="opacity:1;" data-15000="opacity:1;" data-15900="opacity:0;"></div>
           <!-- end "BS01_JB" photo -->
 
           <!-- "town02bw_AR" photo -->
-          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:810px;" data-13500="background-size: 104%;" data-14150="background-size: 100%"></div>
+          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:810px;" data-15000="background-size: 104%;" data-15500="background-size: 100%"></div>
           <!-- end "town02bw_AR" photo -->
 
           <!-- "town01_AR" photo -->
@@ -165,7 +166,7 @@
           <!-- end "town01_AR" photo -->
 
          <!-- "richie_house03bw_IA" photo -->
-          <div data-mediaid="richie_house03bw_IA" class="image cover-bg" style="height:975px; margin-bottom: 250px; " data-16400="opacity:1;" data-16900="opacity:0;"></div>
+          <div data-mediaid="richie_house03bw_IA" class="image cover-bg" style="height:975px; margin-bottom: 250px; " data-17750="opacity:1;" data-18500="opacity:0;"></div>
           <!-- end "richie_house03bw_IA" photo -->
 
           <!-- "town_cemetary03_AR" photo -->
@@ -174,8 +175,8 @@
 
 
           <!-- "Time_Lapse_Clip_Film" video -->
-          <div class="video-container" style="height:900px;">
-            <video data-mediaid="Time_Lapse_Clip_Film" data-startmedia="15800" data-stopmedia="18500" loop></video>
+          <div class="video-container" style="height:1100px;">
+            <video data-mediaid="Time_Lapse_Clip_Film" data-startmedia="17800" data-stopmedia="18900" loop></video>
           </div>
           <!-- end "Time_Lapse_Clip_Film" video -->
 
@@ -204,13 +205,13 @@
           <!-- end "BS_pinhole02_JB" photo -->
 
           <!-- "demolition03_JB" photo -->
-          <div data-mediaid="demolition03_JB" class="image cover-bg" style="height:700px;" data-17500="opacity:0;" data-17900="opacity:1;"></div>
+          <div data-mediaid="demolition03_JB" class="image cover-bg" style="height:700px;" data-18500="opacity:0;" data-18900="opacity:1;"></div>
           <!-- end "demolition03_JB" photo -->
 
 
           <!-- "Demolition" video -->
-          <div class="video-container" style="height:900px;">
-            <video data-mediaid="Demolition" data-startmedia="18400" data-stopmedia="19500" data-maxvolume="0.5" loop></video>
+          <div class="video-container" style="height:600px;">
+            <video data-mediaid="Demolition" data-startmedia="19400" data-stopmedia="21200" data-maxvolume="0.5" loop></video>
           </div>
           <!-- end "Demolition" video -->
 
@@ -219,7 +220,7 @@
           <!-- end "demolition686_steel_JB" photo -->
 
         <!-- "destruction01_AR" photo -->
-          <div data-mediaid="destruction01_AR" class="image cover-bg" style="height:800px;"></div>
+          <div data-mediaid="destruction01_AR" class="image cover-bg" style="height:900px;" data-20400="opacity:0;" data-20900="opacity:0.5;" data-21000="opacity:1;"></div>
           <!-- end "destruction01_AR" photo -->
 
         <!-- "construction_snow02_AR" photo -->
@@ -232,8 +233,8 @@
 
 
           <!-- "Casino_Pods" video -->
-          <div class="video-container" style="height:700px;margin-top:75px;margin-bottom: 700px;" >
-            <video data-mediaid="Casino_Pods" data-startmedia="19750"></video>
+          <div class="video-container" style="height:1000px;margin-top:0px;margin-bottom: 1000px;" >
+            <video data-mediaid="Casino_Pods" data-startmedia="21000"></video>
           </div>
           <!-- end "Casino_Pods" video -->
 
@@ -252,7 +253,7 @@
           <div id="textlayer-shim" data-start="top:1600px;" data-end="top:-1800px;">
 
             <!-- text overlay --> 
-            <div style="margin-top:1035px;" class="text-overlay" data-0="opacity:0;" data-1875="opacity:0;" data-1975="opacity:1;" data-2350="opacity:1;" data-2500="opacity:0">
+            <div style="margin-top:1295px;" class="text-overlay" data-0="opacity:0;" data-1875="opacity:0;" data-1975="opacity:1;" data-2350="opacity:1;" data-2500="opacity:0">
               <p>For more than a century,<br>
               Bethlehem Steel was a major center of US industry</p>
             </div>
@@ -271,78 +272,78 @@
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:35px;" class="text-overlay" data-0="opacity:0;" data-2500="opacity:0;" data-2525="opacity:1;">
+            <div style="margin-top:50px;" class="text-overlay" data-0="opacity:0;" data-2500="opacity:0;" data-2525="opacity:1;">
               <p>Golden Gate Bridge</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2525="opacity:0;" data-2550="opacity:1;">
+            <div style="margin-top:25px;" class="text-overlay" data-0="opacity:0;" data-2525="opacity:0;" data-2550="opacity:1;">
               <p>Empire State Building</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2550="opacity:0;" data-2575="opacity:1;">
+            <div style="margin-top:25px;" class="text-overlay" data-0="opacity:0;" data-2550="opacity:0;" data-2575="opacity:1;">
               <p>Chrysler Building</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2575="opacity:0;" data-2625="opacity:1;">
+            <div style="margin-top:25px;" class="text-overlay" data-0="opacity:0;" data-2575="opacity:0;" data-2625="opacity:1;">
               <p>Woolworth Building</p>
             </div>
 
             <!-- text overlay -->
-            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2625="opacity:0;" data-2675="opacity:1;">
+            <div style="margin-top:25px;" class="text-overlay" data-0="opacity:0;" data-2625="opacity:0;" data-2675="opacity:1;">
               <p>Verrazano Bridge</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2675="opacity:0;" data-2725="opacity:1;">
+            <div style="margin-top:25px;" class="text-overlay" data-0="opacity:0;" data-2675="opacity:0;" data-2725="opacity:1;">
               <p>Mackinac Bridge</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2725="opacity:0;" data-2775="opacity:1;">
+            <div style="margin-top:25px;" class="text-overlay" data-0="opacity:0;" data-2725="opacity:0;" data-2775="opacity:1;">
               <p>Lincoln Tunnel</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2775="opacity:0;" data-2825="opacity:1;">
+            <div style="margin-top:25px;" class="text-overlay" data-0="opacity:0;" data-2775="opacity:0;" data-2825="opacity:1;">
               <p>Holland Tunnel</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2825="opacity:0;" data-2875="opacity:1;">
+            <div style="margin-top:25px;" class="text-overlay" data-0="opacity:0;" data-2825="opacity:0;" data-2875="opacity:1;">
               <p>Rockefeller Center</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2875="opacity:0;" data-2925="opacity:1;" data-3360="opacity:1;" data-3400="opacity:0;">
+            <div style="margin-top:25px;" class="text-overlay" data-0="opacity:0;" data-2875="opacity:0;" data-2925="opacity:1;" data-3360="opacity:1;" data-3400="opacity:0;">
               <p>Madison Square Garden</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2925="opacity:0;" data-2975="opacity:1;" data-3380="opacity:1;" data-3440="opacity:0;">
+            <div style="margin-top:25px;" class="text-overlay" data-0="opacity:0;" data-2925="opacity:0;" data-2975="opacity:1;" data-3380="opacity:1;" data-3440="opacity:0;">
               <p>Hoover Dam</p>
             </div>
             <!-- end text overlay -->
 
              <!-- text overlay -->
-            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2975="opacity:0;" data-3025="opacity:1;" data-3450="opacity:1;" data-3500="opacity:0;">
+            <div style="margin-top:25px;" class="text-overlay" data-0="opacity:0;" data-2975="opacity:0;" data-3025="opacity:1;" data-3450="opacity:1;" data-3500="opacity:0;">
               <p>WW II armaments &amp; ships...</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:3750px;" class="text-overlay" data-6500="opacity:0;" data-6630="opacity:1;" data-6700="opacity:1;" data-6800="opacity:0;">
+            <div style="margin-top:4550px;" class="text-overlay" data-6500="opacity:0;" data-6630="opacity:1;" data-6700="opacity:1;" data-6800="opacity:0;">
               <p>–Richie Chech <br>
                 Former Steel Worker</p>
             </div>
